Fixed Header overflow

--- a/style.css
+++ b/style.css
@@ -193,10 +193,10 @@ footer p {
   }
 
   header{
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
   }
   #ideas .ideas-container {
     display: flex;
